feat: YouTube app complete social features overhaul
YOUTUBE SOCIAL FEATURES:
- Comments system with Firebase persistence (shared across users)
- Threaded replies with notifications to parent commenter
- Likes/dislikes with global vote counts
- Channel subscribing with Subscriptions tab
- Notifications tab with badge counter + 30s polling
- Same-creator related videos (searches by channel name first)
- Veltra account username as YouTube display name

MELODIFY FIXES (from prior work):
- searchMelodify uses dynamic getMelodifyBackendUrl()
- Shuffle now properly randomizes in melodifyNext()
- playFromLibrary doesn't clobber search results
- YouTube embed fallback with XSS sanitization
- Volume/repeat/shuffle persist to localStorage
- Library saves to both localStorage keys

NEW INFRASTRUCTURE:
- Generic onClose callback system for window cleanup
- initYoutubeSocial() for social data initialization
- Notification polling start/stop lifecycle

TEST SUITE:
- tests/youtube-social-test.js - 70+ automated tests
- Run: await runYoutubeTests() in browser console
- Covers: comments, likes, subscriptions, notifications, player, UI

--- a/index.html
+++ b/index.html
@@ -451,6 +451,9 @@
             <div class="desktop-icon" ondblclick="openApp('melodify')" data-app="melodify">
                 <i class="fas fa-music"></i> <span>Melodify</span>
             </div>
+            <div class="desktop-icon" ondblclick="openApp('youtube')" data-app="youtube">
+                <i class="fas fa-play-circle"></i> <span>YouTube</span>
+            </div>
             <div class="desktop-icon" ondblclick="openApp('photos')" data-app="photos">
                 <i class="fas fa-images"></i> <span>Photos</span>
             </div>
