Comprehensive codebase audit: fix 30+ bugs, edge cases, and improvements
Critical fixes:
- Fix BIOS confirm/alert/prompt being async but called synchronously (always true)
- Fix forgotPassword allowing anyone to reset without username verification
- Fix XSS in login account selector (escape usernames in HTML/onclick)
- Fix XSS in window title injection (escapeHtmlSimple)
- Fix XSS in Melodify queue (escape track title/artist)
- Fix duplicate contextMenu ID in HTML (removed second instance)
- Fix broken HTML in tic-tac-toe trophy icon (missing closing bracket)
- Remove invalid @import statements at end of CSS (ignored by spec)

Security improvements:
- Add URL scheme validation in web app creator (block javascript:/data:)
- Username sanitization in changeuser (reject HTML special chars)
- Duplicate username check in changeuser
- Minimum 6-char password for account creation from login

Bug fixes:
- Fix checkNightOwl impossible condition (hour>=11 && hour<3 -> hour>=23 || hour<3)
- Fix duplicate setupStep3Back function (second overwrote first with wrong logic)
- Fix executeTool_CloseApp using win.remove() instead of closeWindow()
- Fix @keyframes slideUp conflict (tile version renamed to tileSlideUp)
- Fix font typo SEUS Mono -> SUSE Mono
- Fix display:block then display:flex contradiction in cloaking-label
- Fix @layer demo.support overriding body styles (removed)
- Remove 5 debug console.logs from UV proxy

Performance & stability:
- Add recursion depth limit (100) to countFiles, countFolders, findInFS, grepInFS
- Stop support notification polling on sign-out (memory leak)
- Add 2048 game keydown listener cleanup on window close
- Wrap experimental CSS base-select in @supports for cross-browser safety

Accessibility:
- Add aria-labels, autocomplete, role=button to login inputs
- Add role=button, tabindex=0, aria-label to all 20 desktop icons
- Add keyboard activation (Enter/Space) for desktop icons
- Fix UV iframe: remove deprecated frameborder, add title attribute
-

--- a/app/uv.html
+++ b/app/uv.html
@@ -327,7 +327,7 @@
         <p>made by $xor | built for veltra-os</p>
     </div>
 
-    <iframe src="" frameborder="0" id="iframe"></iframe>
+    <iframe src="" id="iframe" title="Browser content" style="border: none;"></iframe>
 
     <script>
         // Toast notification function for UV
@@ -710,7 +710,6 @@
                 const newATab = bTabs[Math.max(0, tIndex - 1)];
                 if (newATab) {
                     switchTab(newATab.id);
-                    console.log("woah")
                 }
             }
         }
@@ -719,11 +718,9 @@
             e.preventDefault()
             const inp = document.getElementById("urlbar")
             nav(inp.value)
-            console.log("i")
         })
 
         function nav(i) {
-            console.log("e")
             if (!i.trim()) return
 
             let url = i.trim()
@@ -902,9 +899,7 @@
 
         function full() {
             const viewframe = document.querySelector(`.viewframe[data-frame-id="${aTab}"]`)
-            console.log("adksjfh")
             const popup = window.open(viewframe.src, "_blank")
-            if (popup) console.log("popped out")
         }
 
         function hide() {
